* Changes and New Features in Evil

** News in 1.0.5

   * Fix bug in `show-paren-mode` due to variable renaming in latest
     emacs.

** News in 1.0.4

   * Undo one restriction when <c> argument is read in operator state.

** News in 1.0.3

   * Fix `evil-delete-backward-word` at first non-blank in a line.

** News in 1.0.2

   * Fix #290.

** News in 1.0.1

*** Improvements

   * An ELPA package built by =make elpa= contains COPYING file.

   * Bind =[tab]= like =\t= in =evil-ex-completion-map=, so that it
     cannot be overwritten by a =[tab]= binding in the parent keymap
     =minibuffer-local-completion-map=.

   * Improve worst case performance of internal functions
     =evil-in-string-p=, =evil-string-beginning= and
     =evil-string-end=. This functions are used, e.g., in certain text
     objects to detect whether point is within a string.

   * Update authors list.

*** Fixes

   * The interactive code =<state>= is fixed and used correctly in
     =evil-ex-set-initial-state=.

   * =evil-ex-global= always generates a single undo-step.

   * Resolved issues: #249, #250, #253 and #257.